@@ -1,5 +1,6 @@
 with OpenAL.Context;
 with OpenAL.Types;
+with OpenAL.Source;
 
 private with OpenAL.Extension.EFX_Thin;
 
@@ -244,6 +245,95 @@ package OpenAL.Extension.EFX is
   function Auxiliary_Effect_Slot_Is_Valid
     (Extension : in Extension_t;
      Slot      : in Auxiliary_Effect_Slot_t) return Boolean;
+
+  --
+  -- Source filtering and properties.
+  --
+
+  -- proc_map : alSourcei
+  procedure Direct_Filter
+    (Extension : in Extension_t;
+     Source    : in OpenAL.Source.Source_t;
+     Filter    : in Filter_t);
+
+  type Source_Auxiliary_Send_t is new Types.Unsigned_Integer_t;
+
+  -- proc_map : alSource3i
+  procedure Auxiliary_Send_Filter
+    (Extension   : in Extension_t;
+     Source      : in OpenAL.Source.Source_t;
+     Slot        : in Auxiliary_Effect_Slot_t;
+     Source_Send : in Source_Auxiliary_Send_t := 0;
+     Filter      : in Filter_t                := No_Filter);
+
+  type Air_Absorption_Factor_t is new Types.Float_t range 0.0 .. 10.0;
+
+  -- proc_map : alSourcef
+  procedure Air_Absorption_Factor
+    (Extension : in Extension_t;
+     Source    : in OpenAL.Source.Source_t;
+     Factor    : in Air_Absorption_Factor_t);
+
+  type Room_Rolloff_Factor_t is new Types.Float_t range 0.0 .. 10.0;
+
+  -- proc_map : alSourcef
+  procedure Room_Rolloff_Factor
+    (Extension : in Extension_t;
+     Source    : in OpenAL.Source.Source_t;
+     Factor    : in Room_Rolloff_Factor_t);
+
+  type Cone_Outer_Gain_HF_t is new Types.Float_t range 0.0 .. 10.0;
+
+  -- proc_map : alSourcef
+  procedure Cone_Outer_Gain_HF
+    (Extension : in Extension_t;
+     Source    : in OpenAL.Source.Source_t;
+     Factor    : in Cone_Outer_Gain_HF_t);
+
+  -- proc_map : alSourcei
+  procedure Direct_Filter_Gain_HF_Auto
+    (Extension : in Extension_t;
+     Source    : in OpenAL.Source.Source_t;
+     Enable    : in Boolean);
+
+  -- proc_map : alSourcei
+  procedure Auxiliary_Send_Filter_Gain_Auto
+    (Extension : in Extension_t;
+     Source    : in OpenAL.Source.Source_t;
+     Enable    : in Boolean);
+
+  -- proc_map : alSourcei
+  procedure Auxiliary_Send_Filter_Gain_HF_Auto
+    (Extension : in Extension_t;
+     Source    : in OpenAL.Source.Source_t;
+     Enable    : in Boolean);
+
+  --
+  -- Listener extensions.
+  --
+
+  type Meters_t is new Types.Float_t range 0.000001 .. Types.Float_t'Last;
+
+  -- proc_map : alListenerf
+  procedure Meters_Per_Unit
+    (Extension : in Extension_t;
+     Meters    : in Meters_t);
+
+  --
+  -- Context extensions.
+  --
+
+  -- proc_map : alcGetIntegerv
+  function Major_Version
+    (Extension : in Extension_t) return Natural;
+
+  -- proc_map : alcGetIntegerv
+  function Minor_Version
+    (Extension : in Extension_t) return Natural;
+
+  -- proc_map : alcGetIntegerv
+  function Maximum_Auxiliary_Sends
+    (Extension : in Extension_t) return Source_Auxiliary_Send_t;
 
 private
 
