@@ -6,3 +6,5 @@
                in OpenAL.Extension.EFX_Thin.
 20100114 code: OpenAL.Extension.EFX effect type/parameter setting implemented.
 20100114 code: OpenAL.Extension.EFX filter type/parameter setting implemented.
+20100114 code: OpenAL.Extension.EFX source, listener and context extensions
+               implemented.
